# sample-claude-code-multi-model

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  SUPPORT.md  THIRD_PARTY
.claude/skills/benchmark/: SKILL.md
.claude/skills/implement/: SKILL.md
.claude/skills/security-check/: SKILL.md
.claude/skills/security-check/personas/: security-engineer.md  security-patterns.md
.claude/skills/swe/: SKILL.md
.claude/skills/vllm-setup/: SKILL.md  p5en-h200-cuda-fixes.md
.github/ISSUE_TEMPLATE/: bug_report.md
bedrock/: CHANGELOG.md  README.md
bedrock/benchmark/: humaneval_rescore.py  humaneval_runner.py
bedrock/config/: litellm-config.yaml
bedrock/scripts/: claude-model.sh  mantle-token.sh  setup-proxy.sh
benchmarks/: README.md
benchmarks/config/: runner.example.yaml
benchmarks/dataset/: hello-world.yaml
benchmarks/docs/: end-to-end-self-hosted-run.md  harness-reference.md  path-self-hosted-vllm.md
benchmarks/scripts/: codex_judge.py  extract-metrics.py  judge_common.py  llm_as_judge.py  plot_cost_quality.py  preflight_check.py  replay-benchmark.py  run-e2e-benchmark.sh  run-swe-benchmark.sh  run-swe-headless.py  runner_config.py  select-best-lld.sh
benchmarks/swe-benchmark-data/: README.md
benchmarks/swe-benchmark-data/claude-opus-4-8/Hello-World/add-contributing-guide/: github-issue.md  lld.md  metrics.json  review.md  testing.md
benchmarks/swe-benchmark-data/claude-sonnet-5/Hello-World/add-contributing-guide/: github-issue.md  (+4 more)
benchmarks/swe-benchmark-data/mcp-gateway-registry/: JUDGE_RESULTS.md
benchmarks/tests/: test_codex_judge.py  test_preflight_check.py  test_run_swe_headless.py  test_runner_config.py
self-hosted/: README.md
self-hosted/ollama/sample/tests/: __init__.py
self-hosted/vllm/: README.md  pyproject.toml
self-hosted/vllm/clients/: benchmark_inference.py  build_dashboard.py  collect_metrics.py  hello_inference.py
self-hosted/vllm/config/: claude-code.json  opencode.json
self-hosted/vllm/models/: glm-5.2.md  kimi-k2.7-code.md  qwen3-coder-next.md  qwen3.6-35b-a3b.md
self-hosted/vllm/scripts/: claude-local.sh  opencode-setup.sh  tunnel.sh  vllm-install.sh  vllm-metrics.sh  vllm-serve.sh  vllm-verify.sh
self-hosted/vllm/tests/: test_benchmark_inference.py  test_build_dashboard.py  test_collect_metrics.py
(+51 files in other folders)
